--- a/templates/faq.tmpl
+++ b/templates/faq.tmpl
@@ -5,16 +5,16 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-		<a class="navbar-brand" href="{{.ExternalUrl}}/">BlueCSV</a>
+		<a class="navbar-brand" href="{{.ExternalURL}}/">BlueCSV</a>
 		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a class="nav-link" href="{{.ExternalUrl}}/">Home</a>
+				<a class="nav-link" href="{{.ExternalURL}}/">Home</a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="{{.ExternalUrl}}/faq">FAQ</a>
+				<a class="nav-link" href="{{.ExternalURL}}/faq">FAQ</a>
 			</li>
 			{{if .LoggedIn}}<li class="nav-item">
-					<a class="nav-link" href="{{.ExternalUrl}}/logout">Logout</a>
+					<a class="nav-link" href="{{.ExternalURL}}/logout">Logout</a>
 			</li>{{else}}{{end}}
 	        </ul>
 	</nav>
